server/static/css/mog.css
@font-face {
	font-family: 'Material Icons';
	font-style: normal;
	font-weight: 400;
	src: local('Material Icons'), local('MaterialIcons-Regular'), url(/static/fonts/MaterialIcons-Regular.woff) format('woff');
}

.material-icons {
	font-family: 'Material Icons';
	font-weight: normal;
	font-style: normal;
	font-size: 24px;	/* Preferred icon size */
	display: inline-block;
	width: 1em;
	height: 1em;
	line-height: 1;
	text-transform: none;
	letter-spacing: normal;

	/* Support for all WebKit browsers. */
	-webkit-font-smoothing: antialiased;
	/* Support for Safari and Chrome. */
	text-rendering: optimizeLegibility;

	/* Support for Firefox. */
	-moz-osx-font-smoothing: grayscale;

	/* Support for IE. */
	font-feature-settings: 'liga';
}

@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 300;
	src: local('Roboto Light'), local('Roboto-Light'), url(/static/fonts/Roboto-Light.woff) format('woff');
}
@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 400;
	src: local('Roboto'), local('Roboto-Regular'), url(/static/fonts/Roboto-Regular.woff) format('woff');
}
@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 500;
	src: local('Roboto Medium'), local('Roboto-Medium'), url(/static/fonts/Roboto-Medium.woff) format('woff');
}
@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 700;
	src: local('Roboto Bold'), local('Roboto-Bold'), url(/static/fonts/Roboto-Bold.woff) format('woff');
}

.top-main {
	position: absolute;
	top: 0;
	bottom: 80px;
	left: 0;
	right: 0;
}

.page-content {
	margin-left: 20px;
}

footer {
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	height: 70px;
	background-color: #f5f5f5;
}

#seek {
	position: fixed;
	bottom: 70px;
	height: 10px;
	left: 80px;
	right: 0;
	cursor: pointer;
}

@keyframes seek1 {
	from {
		width: 0;
	}
	to {
		width: 100%;
	}
}

@keyframes seek2 {
	from {
		width: 0;
	}
	to {
		width: 100%;
	}
}

table.tracks tr {
	height: 55px;
}

table.tracks td.control {
	width: 38px;
}

table.tracks button {
	margin: 0;
	padding: 0 10px;
	font-size: 20px;
	line-height: 0;
	height: 30px;
}

.sort-asc::after {
	content: "▲";
	padding-left: 5px;
}

.sort-desc::after {
	content: "▼";
	padding-left: 5px;
}

.clickable:hover {
	cursor: pointer;
}

.nowrap div {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.public_fixedDataTable_header .public_fixedDataTableCell_main {
	font-weight: 500;
}

.public_fixedDataTable_bodyRow .nowrap div:after {
	content: "";
	position: absolute;
	top: 0;
	right: 0;
	height: 100%;
	width: 15px;
	background: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255));
}

.public_fixedDataTable_bodyRow.public_fixedDataTableRow_highlighted .nowrap div:after {
	background: linear-gradient(to right, rgba(245, 245, 245,0), rgb(245, 245, 245));
}

.fixedDataTableCellGroup_cellGroup .hover {
	display: none;
}

.fixedDataTableCellGroup_cellGroup:hover .hover {
	display: inline;
}

.fixedDataTableCellGroup_cellGroup:hover .nohover {
	display: none;
}

.pull-right {
	float: right;
	position: absolute;
	right: 5px;
	top: 0px;
	z-index: 10;
}

.active .public_fixedDataTableCell_cellContent {
	font-weight: 700;
}

#overlay {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba(0, 0, 0, .5);
	z-index: 1000;
}

#overlay-text {
	position: fixed;
	top: 20%;
	left: 0;
	right: 0;
	background-color: white;
	padding: 20px;
	text-align: center;
}

.track-title {
	padding-left: 50px;
}

.track-image {
	position: absolute;
	width: 40px;
	height: 40px;
	left: 5px;
	top: 5px;
}

